新增图片选择

--- a/app/src/main/assets/test.html
+++ b/app/src/main/assets/test.html
@@ -12,6 +12,9 @@
 <br/>
 <img width="130px" height="200px" src="https://img.gsdlcn.com/uploads/190220/1-1Z2201Z302340.jpg">
 <br/>
+<p>
+    <input type="file" value="打开文件" />
+</p>
 </body>
 </html>
 
